Version 3.1.3.kf4-001 made KF code compliant to OSGi/Minimum EE.